--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,10 @@
 body {
     background-color: black;
     color: white;
-    margin: 50px;
+}
+
+header{
+    background-color: rgb(41, 41, 41);
 }
 
 .btn-1 {
@@ -55,6 +58,11 @@ nav {
     justify-content: space-around;
     gap: 50px;
     align-items: center;
+    background-color: rgb(48, 48, 48);
+    box-shadow: white;
+    border-bottom: 2px solid #E6533C;
+    position: sticky;
+    top: 0px;
 }
 
 .nav-container {
@@ -83,4 +91,30 @@ nav {
     border-radius: 40px;
     background-color: #E6533C;
     color: white;
+}
+
+
+
+.header-container {
+    background-image: url('/images/Images\ 2.png');
+    background-size: 300px;
+    background-repeat: no-repeat;
+    background-position: 850px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 550px;
+    margin-top: 50px;
+
+    
+}
+
+.box-1{
+    position: relative;
+    right: 200px;
+    top: 430px;
+}
+.box-2{
+    position: relative;
+    top: 130px;
 }
