--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,10 @@
     font-style: italic;
 }
 
+p{
+    color: dimgrey;
+}
+
 body {
     background-color: black;
     color: white;
@@ -63,6 +67,7 @@ nav {
     border-bottom: 2px solid #E6533C;
     position: sticky;
     top: 0px;
+    z-index: 1;
 }
 
 .nav-container {
@@ -103,18 +108,39 @@ nav {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 550px;
+    height: 500px;
     margin-top: 50px;
 
     
 }
 
+.banner-description{
+    color: dimgrey;
+}
+
 .box-1{
     position: relative;
     right: 200px;
-    top: 430px;
+    top: 400px;
 }
 .box-2{
     position: relative;
     top: 130px;
+}
+
+.habit-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 80px;
+    padding: 10px;
+}
+
+.section1{
+    text-align: center;
+    margin-top: 60px;
+}
+.habit-container>div>img{
+    border: none;
+    border-radius: 50%;
 }
