--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,11 @@
     font-style: italic;
 }
 
-p{
+h1 {
+    font-size: xx-large;
+}
+
+p {
     color: dimgrey;
 }
 
@@ -18,7 +22,7 @@ body {
     color: white;
 }
 
-header{
+header {
     background-color: rgb(41, 41, 41);
 }
 
@@ -62,7 +66,7 @@ nav {
     justify-content: space-around;
     gap: 50px;
     align-items: center;
-    background-color: rgb(48, 48, 48);
+    background-color: rgb(106, 98, 98);
     box-shadow: white;
     border-bottom: 2px solid #E6533C;
     position: sticky;
@@ -111,36 +115,174 @@ nav {
     height: 500px;
     margin-top: 50px;
 
-    
+
 }
 
-.banner-description{
+.banner-description {
     color: dimgrey;
 }
 
-.box-1{
+.box-1 {
     position: relative;
     right: 200px;
     top: 400px;
 }
-.box-2{
+
+.box-2 {
     position: relative;
     top: 130px;
 }
 
-.habit-container{
+.habit-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 80px;
     padding: 10px;
+    gap: 20px;
 }
 
-.section1{
+.section1 {
     text-align: center;
     margin-top: 60px;
+    padding: 70px;
 }
-.habit-container>div>img{
+
+.habit-container>div>img {
     border: none;
     border-radius: 50%;
 }
+
+.section2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 70px;
+    background-color: rgb(39, 37, 37);
+    margin-top: 50px;
+}
+
+.training-banner{
+    margin: 80px 0px 50px 80px;
+    /* padding: 80px; */
+}
+
+.exercise-container>div>img {
+    width: 200px;
+}
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    padding: 80px;
+    
+}
+
+.grid-item {
+    position: relative;
+    overflow: hidden;
+    color: white;
+    font-weight: bold;
+}
+
+.grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.overlay1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(62, 205, 200, 0.366);
+    /* transparent color */
+    display: flex;
+    justify-content: start;
+    align-items: end;
+    padding: 10px;
+    text-align: left;
+}
+.overlay2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(230, 99, 90, 0.431);
+    /* transparent color */
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding: 10px;
+    text-align: center;
+}
+.overlay3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(190, 230, 88, 0.277);
+    /* transparent color */
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    padding: 10px;
+    text-align: center;
+}
+.overlay4 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(70, 106, 236, 0.346);
+    /* transparent color */
+    display: flex;
+    justify-content: end;
+    align-items: start; 
+    padding: 10px;
+    text-align: center;
+}
+.overlay5 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 255, 26, 0.334);
+    /* transparent color */
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    padding: 10px;
+    text-align: center;
+}
+.overlay6 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(252, 113, 224, 0.28);
+    /* transparent color */
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding: 10px;
+    text-align: center;
+}
+
+/* Optional: make specific items span more than one column */
+/* .grid-item.wide {
+    grid-column: span 2;
+}
+
+.grid-item.tall {
+    grid-row: span 2;
+} */
